<resources>
    <string name="app_name">RoomDB Demo</string>
    <string name="new_schedule">New Schedule</string>
    <string name="all_schedules">All Schedules</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="update">update</string>
    <string name="profile_menu">Profile</string>
    <string name="search">Search</string>
    <string name="message">Message</string>
    <string name="notification">Notification</string>
    <string name="favourite">My Favourites</string>
    <string name="my_cart">My Cart</string>
    <string name="add_to_cart">Add To Cart</string>
    <string name="purchase">Purchase</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="register_now">Register Now</string>
    <string name="are_you_a_new_user">Are you a new user?</string>
    <string name="login_reg">LOGIN / REGISTRATION</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
</resources>